--- a/index.html
+++ b/index.html
@@ -2,42 +2,39 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Your Name | Portfolio</title>
-  <link rel="stylesheet" href="style.css"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Portfolio</title>
+  <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
   <header>
-    <h1>Your Name</h1>
+    <img src="assets/images/logo.png" alt="Logo" class="logo">
     <nav>
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="projects.html">Projects</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>I am a passionate developer with an interest in building elegant, user-friendly websites and applications. I love learning new technologies and solving real-world problems.</p>
-  </section>
+  <main>
+    <section class="hero">
+      <h1>Welcome to My Website</h1>
+      <p>This is a showcase of my projects and work.</p>
+      <img src="assets/images/banner.jpg" alt="Banner" />
+    </section>
 
-  <section id="projects">
-    <h2>Projects</h2>
-    <ul>
-      <li><strong>Project 1</strong>: Description of your first project.</li>
-      <li><strong>Project 2</strong>: Description of your second project.</li>
-      <li><strong>Project 3</strong>: Description of your third project.</li>
-    </ul>
-  </section>
-
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:you@example.com">you@example.com</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">yourprofile</a></p>
-  </section>
+    <section>
+      <h2>Featured Projects</h2>
+      <div class="project">
+        <img src="assets/images/project1.png" alt="Project 1" />
+        <p>Project 1 Description</p>
+      </div>
+    </section>
+  </main>
 
   <footer>
-    <p>&copy; 2025 Your Name</p>
+    <p>&copy; 2025 Your Name. All rights reserved.</p>
   </footer>
 </body>
 </html>
