--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ main {
         <a href="#contact">Contact</a>
       </nav>
 
-      <img src="assets/images/logo.png" alt="Dhruv Logo" class="logo" />
+      <img src="https://drive.google.com/file/d/1HdmK6UwBII6OwdQ-n8MeKQE91tdwjyCl/view?usp=sharing" alt="Dhruv Logo" class="logo" />
       <div class="hero-text">
         <h1>Dhruv Sawant</h1>
         <p><strong>Mechanical Engineering Student at Symbiosis Institute of Technology, Pune</strong></p>
@@ -171,13 +171,13 @@ main {
     <h3>Liquid Rocket Engine System</h3>
     <div class="project">
       <p>Designed and tested a small liquid rocket engine and working on the pressure feed system for the engine.</p>
-      <img src="assets/images/engine.gif" alt="Rocket Firing Animation" style="width: 600px; border-radius: 10px;" />
+      <img src="https://drive.google.com/file/d/1S8TGYS3ftBR8ka8f6SNzjh5qV0nz69I9/view?usp=drive_link" alt="Rocket Firing Animation" style="width: 600px; border-radius: 10px;" />
     </div>
 
     <h3>Digital Twin - FDM 3D Printer</h3>
     <div class="project">
       <p>Built a digital twin with mounted sensors to create a real-time REST API-driven ecosystem.</p>
-      <img src="assets/images/digital_twin.gif" alt="Digital Twin" style="width: 600px; height: 400px; border-radius: 10px;" />
+      <img src="https://drive.google.com/file/d/1AATQfFyCManA-FBxjymCUND6q6_wLcil/view?usp=drive_link" alt="Digital Twin" style="width: 600px; height: 400px; border-radius: 10px;" />
     </div>
 
     <h3>Design of Precision Dispensing & Segregation System</h3>
@@ -186,10 +186,17 @@ main {
       <img src="assets/images/liq_dispenser.png" alt="Liquid Dispenser" style="width: 600px; height: 400px; border-radius: 10px;" />
     </div>
 
+     <h3>Ionic Thrust Wing Airfoil</h3>
+    <div class="project">
+      <p></p>
+      <a href="https://www.behance.net/gallery/227673381/Ionic-Thrust-Wing-Airfoil" target="_blank">Design of Ionic Thrust Airfoil.</a>
+      <img src="https://drive.google.com/file/d/1sIBOxKjjUZbc47k_P4KI34xNLjzOIe87/view?usp=drive_link" alt="Airfoil" style="width: 600px; height: 600px; border-radius: 10px;" />
+    </div>
+
     <h3>Pill Dispenser for Medical Bot (SCOBO)</h3>
     <div class="project">
       <p>Design of Pill Dispensing System.</p>
-      <img src="assets/images/pill_dispenser.gif" alt="Liquid Dispenser" style="width: 600px; height: 600px; border-radius: 10px;" />
+      <img src="https://drive.google.com/file/d/1B7x55wWHkUTou4Z3MZd1fcNAHDJr9ekMW/view?usp=drive_link" alt="Pill Dispenser" style="width: 600px; height: 600px; border-radius: 10px;" />
     </div>
 
     <h2 id="publications">Publications</h2>
